docs/grammar.ebnf
program = { declaration } ;

declaration = struct_decl
            | enum_decl
            | func_decl
            | typedef_decl
            | import_st
            | "static" var_decl ;

param = ident ":" type ;
params = param { "," params } ;
func_decl = "func" ident "(" type [ "," params ] ")" block ;

var_decl = "let" ident ":" type ["=" expr] ";" ;

field = ident ":" type;
fields = { field ";" } ;
struct_decl = "struct" ident "{" fields "}" ;

enum_mod = "noprefix" ;
enum_mods = enum_mod [ "," enum_mods ] ;
variant = ident ;
variants = variant { "," variants } [ "," ] ;
enum_decl = "enum" ident [ "[" enum_mods "]" ] "{" variants "}" ;

block = "{" { statement } "}" ;

statement = import_st
          | return_st
          | var_decl
          | if_st
          | while_st
          | for_st
          | asm_st
          | block
          | expr ";" ;

asm_st = "asm" STR ";" ;

import_st = "import" ident { "." ident } ";" ;
return_st = "return" expr ";" ;
if_st = "if" "(" expr ")" block [ "else" statement ];
while_st = "while" "(" expr ")" block ;
for_st = "for" "(" expr ";" expr ";" expr ")" block ;

expr = assign ;
assign = logic_or [ "=" assign ] ;
logic_or = logic_and { "||" logic_and } ;
logic_and = equality { "&&" equality } ;
equality = relation [ ( "==" | "!=" ) relation ] ;
relation = bitwise_or [ ( "<" | ">" | "<=" | ">=" ) bitwise_or ] ;
bitwise_or = bitwise_xor { "|" bitwise_xor } ;
bitwise_xor = bitwise_and { "^" bitwise_and } ;
bitwise_and = shift { "&" shift } ;
shift = add { ( "<<" | ">>" ) add } ;
add = mult { ( "+" | "-" ) mult } ;
mult = unary { ( "*" | "/" | "%" ) unary } ;
unary = { "!" | "-" | "~" } ref ;
ref = [ "&" ] access ;
access = "@" primary
       | "cast" "(" type "," expr ")"
       | primary { postfix_op } ;

si_mem = identifier ":" expr ;
struct_init = si_mem { "," si_mem } [ "," ];
args = expr { "," expr } [ "," ] ;
postfix_op = "(" [ args ] ")"
           | "[" expr "]"
           | "{" struct_init "}"
           | "->" ident
           | "." ident ;

typedef_decl = "typedef" ident "=" type ";" ;

prim = "void"
     | "char"
     | "usize"
     | "isize"
     | "u64"
     | "i64"
     | "u32"
     | "i32"
     | "u16"
     | "i16"
     | "u8"
     | "i8" ;

type = "[" expr "]" type
     | "@" type
     | ident
     | prim
     | "spec" ident
     | "Func" "<" type { "," type } ">" ;

primary = NUM | STR | CHAR | ident | "(" expr ")" ;

ident = ( ALPHA | "_" ) { ALNUM | "_" } ;
